fix api-spec
